test_suite/tests/ui/transparent/ser_at_least_one.stderr
error: #[serde(transparent)] requires at least one field that is not skipped
 --> tests/ui/transparent/ser_at_least_one.rs:4:1
  |
4 | / #[serde(transparent)]
5 | | struct S {
6 | |     #[serde(skip)]
7 | |     a: u8,
8 | | }
  | |_^
